--- a/genaiprojnew/webapp/i18n/i18n.properties
+++ b/genaiprojnew/webapp/i18n/i18n.properties
@@ -12,3 +12,9 @@ title=Dev Cockpit - Gen AI Hub
 
 #XFLD,63
 Zgenaisemobjnew-display.flpTitle=New UI Gen AI Hub App
+
+TitleParamPopup=Parameters Configuration
+warningSysMsgEmpty=Please provide system message and its key!
+warningSysMsgKeyEmpty=Please enter the system key!
+successSysMsgSave=System Message Registered Successfully!
+warningSystemMessage=All the existing content will be deleted and new session will be started
