Upload and Files button implemented

--- a/genaiprojnew/webapp/i18n/i18n.properties
+++ b/genaiprojnew/webapp/i18n/i18n.properties
@@ -18,3 +18,7 @@ warningSysMsgEmpty=Please provide system message and its key!
 warningSysMsgKeyEmpty=Please enter the system key!
 successSysMsgSave=System Message Registered Successfully!
 warningSystemMessage=All the existing content will be deleted and new session will be started
+successFileUpload=File uploaded successfully.
+errorFileUpload=Error uploading file.
+fileUpload=Please select a file to upload.
+
